--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Introduction title should mean somethig
+description:
+sidebarTitle: Introduction
 ---
 
 <img
