--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,72 +1,54 @@
 ---
-title: Introduction title should mean somethig
-description:
+title: CloudFlex
+description: CloudFlex is a service provided by Lifepowr that allows an authenticated user to create a virtual representation of their Flexio EMS supported energy devices within a certain physical location and periodically supply data from those devices via REST API calls. This data is in turn stored with references to the aforementioned virtual representation and periodically processed by the Flexio EMS to generate a control power set point that should be applied for the purpose of benefiting from the Flexio strategy.
 sidebarTitle: Introduction
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
+  src="/images/cloudflex-light.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/cloudflex-dark.png"
   alt="Hero Dark"
 />
 
-## Setting up
+## Purpose
 
-The first step to world-class documentation is setting up your editing environments.
+CloudFlex allows control of supported Flexio EMS devices that are not available to install a Flexbox on their sites. These sites, however, must have or be willing to implement a cloud-based control infrastructure of their devices (towards which the market seems to be gravitating).
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+Another segment to capture will be devices with a “dumb” local EMS that are willing to perform the operation of sending the data and polling for set points.
 
-## Make it yours
+## Use cases
 
-Update your docs to your brand and add valuable content for the best user conversion.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Enterprise"
+    icon="building"
+    href="/pages/use-cases/enterprise"
   >
-    Customize your docs to your company's colors and brands
+      The enterprise model involves a single actor managing multiple diverse sites, handling device control operations themselves, but lacking the resources or logic to operate their own EMS.
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="End users"
+    icon="user"
+    href="/pages/use-cases/end-users"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+      The end user model is for sites with devices that are compatible with CloudFlex integration.
   </Card>
 </CardGroup>
+
+## Setup
+
+To get started, you’ll need a “container” for your data. You can do this by creating a virtual site. This lets you organize where your data comes in and goes out.
+
+Make sure your virtual site is set up with the right settings and that you regularly send data points. This way, the Flexio EMS can generate smart set points for your site’s devices.
+
+<Tip>A virtual site is a digital version of your location.</Tip>
+
+# Infrastructure
+
+We use an API so users can manage their sites and send in data from their devices.
